# mcp-shipxy-api

./: .env_example  .gitignore  README.md  README_zh.md  cli.py  domain_catalog.py  main.py  pyproject.toml  requirements.txt  server.py  ship_service.py  tool_registry.py  validation.py
.mcp/: server.json
docs/: PUBLISHING.md
