[project]
name = "mcp-shipxy-api"
version = "0.1.0"
description = "面向船舶、港口、航线、气象和潮汐 API 的 Shipxy MCP 服务与 CLI。"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "garrettXu" },
]
keywords = ["shipxy", "mcp", "maritime", "vessel", "shipping", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "starlette>=0.47.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
shipxy = "cli:main"
mcp-shipxy-api = "cli:main"

[project.urls]
Homepage = "https://github.com/garrettXu/mcp-shipxy-api"
Repository = "https://github.com/garrettXu/mcp-shipxy-api"
Issues = "https://github.com/garrettXu/mcp-shipxy-api/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "domain_catalog", "server", "ship_service", "tool_registry", "validation"]
